fixed project images in wrong position

--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@ nav > a {
     margin-top: 0;
 }
 
-@media (min-width: 800px) {
+@media (min-width: 900px) {
 
 body {
     grid-template-areas: ;
@@ -238,8 +238,16 @@ nav {
 
 .project-item {
     width: 30%;
-    height: 450px;
+    max-height: 450px;
+    padding: 15px;
 }
 
+.project-item > img {
+    max-width: 80%;
+    max-height: 100%;
+}
+.project-button {
+    
+}
 
 }
